--- a/simple-runner/iframe.html
+++ b/simple-runner/iframe.html
@@ -10,6 +10,8 @@ function Test262Error(message) {
     this.message = message || "";
 }
 
+Test262Error.prototype.constructor = Test262Error;
+    
 Test262Error.prototype.toString = function () {
     return "Test262Error: " + this.message;
 };
